--- a/user-dev.yml
+++ b/user-dev.yml
@@ -9,7 +9,7 @@ spring:
   application:
     name: user-service
 mybatis:
-  type-aliases-package: com.lsw.user.pojo
+  type-aliases-package: com.lsw.user.pojo.do
 eureka:
   client:
     service-url:
